--- a/source/_data/yun.yml
+++ b/source/_data/yun.yml
@@ -10,9 +10,9 @@ tags:
   C语言: "#4fc08d"
   Hexo: "#0E834D"
   leetcode: "#5298d1"
-  Node.js: "#026E00"
+  APUE: "#026E00"
   Git: "#F14E32"
-  React: "#61dafb"
+  Linux: "#61dafb"
   Python: "#3776ab"
   PHP: "#8892BF"
   VS Code: "#0066B8"
